- Added collapse behavior on accordion component (open-close) - Added property key to accordion item map component loop - Create a file _redirects in the public folder and fill in the contents of the file \_redirects - Handle error when fetching api *https://en.wikipedia.org/w/api.php* (add image) - Added search result count information from fetch api *https://en.wikipedia.org/w/api.php* - Create a reusable function:   * createMarkup(stringCode):     - prevent XSS attacks from occurring (https://en.wikipedia.org/wiki/Cross-site_scripting)     - parameter:       - stringCode:         - the value you want to display on the screen (string type)         - type: string     - return: html elements that have been deactivated codes that are assumed to be dangerous - Added support for language translation into Indonesian

--- a/src/index.css
+++ b/src/index.css
@@ -1,33 +1,38 @@
-body{
-    background-color: rgb(0, 0, 0);
-    color: white;
-    margin: 15px;
+body {
+  background-color: rgb(0, 0, 0);
+  color: white;
+  margin: 15px;
 }
 
 .ui.menu:not(.vertical) .item {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    padding: 13px 12px 13px 12px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  padding: 13px 12px 13px 12px;
 }
 
-.ui.header{
-    color: white;
+.ui.header {
+  color: white;
 }
 
 /* Search */
 .ui.form .field > label {
-    font-size: 19px;
-    color: white;
-} 
-.ui.list .list > .item .header, .ui.list > .item .header{
-    color: white;
+  font-size: 19px;
+  color: white;
+}
+.ui.list .list > .item .header,
+.ui.list > .item .header {
+  color: white;
 }
 
 /* Accordion */
-p{
-    color: black;
+p {
+  color: black;
+}
+
+.container-error-search {
+  margin-top: 10px;
 }
